--- a/dotnet/WebApiSolution/WebApi/WebApi.csproj
+++ b/dotnet/WebApiSolution/WebApi/WebApi.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
+ 
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
+		<PackageReference Include="Azure.Storage.Files.Shares" Version="12.12.1" />
+	</ItemGroup>
 
 </Project>
