ignore bin folder

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ dism.log
 /dotnet/WebApiSolution/WebApi/obj
 /dotnet/WebApiSolution/WebMvc/bin/Debug/net6.0
 /dotnet/WebApiSolution/WebMvc/obj
+/dotnet/WebApiSolution/WebApi/bin/Debug/net7.0
+/dotnet/WebApiSolution/WebMvc/bin/Debug/net7.0
