--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,10 @@ variables:
 
 steps:
 
+- task: UseDotNet@2
+  displayName: 'Install .NET Core sdk 6.x'
+  inputs:
+    version: 6.x
 - task: DotNetCoreCLI@2
   inputs:
     command: 'restore'
