--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,26 +8,25 @@ trigger:
 
 pool: LOGCORNER-POOL
 
-  
-
 variables:
   buildConfiguration: 'Release'
 
 steps:
-
-
 - task: DotNetCoreCLI@2
+  displayName: Restore
   inputs:
     command: 'restore'
-    projects: '**/WebMvc.csproj'
+    projects: 'dotnet/WebApiSolution/WebMvc/WebMvc.csproj'
     feedsToUse: 'select'
-    restoreDirectory: '$(buildConfiguration)/dotnet/WebApiSolution/WebMvc'
+    restoreDirectory: '$(buildConfiguration)'
 - task: DotNetCoreCLI@2
+  displayName: Build
   inputs:
     command: 'build'
-    projects: '**/WebMvc.csproj'
-    workingDirectory: '$(buildConfiguration)/dotnet/WebApiSolution/WebMvc'
+    projects: 'dotnet/WebApiSolution/WebMvc/WebMvc.csproj'
+    workingDirectory: '$(buildConfiguration)'
 - task: PublishBuildArtifacts@1
+  displayName: PublishBuildArtifacts
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)\dotnet\WebApiSolution\WebMvc'
     ArtifactName: 'webmvc'
