--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,10 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-
+- task: UseDotNet@2
+  inputs:
+    packageType: 'sdk'
+    version: '7.0.0'
 - task: DotNetCoreCLI@2
   displayName: Restore
   inputs:
