create file on front

--- a/dotnet/WebApiSolution/WebMvc/appsettings.Development.json
+++ b/dotnet/WebApiSolution/WebMvc/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "FileStoargeAPIRoot": "https://localhost:54722/"
 }
