--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 .vs/virtual-network-service-endpoints/v17/.wsuo
 .vs/slnx.sqlite
 /dotnet/WebApiSolution/.vs/Solution/FileContentIndex/1adf1c0e-465d-422a-bdeb-cf40194e4720.vsidx
+/dotnet/WebApiSolution/.vs/Solution/FileContentIndex
