--- a/dotnet/WebApiSolution/WebMvc/Properties/launchSettings.json
+++ b/dotnet/WebApiSolution/WebMvc/Properties/launchSettings.json
@@ -3,16 +3,25 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5056",
-      "sslPort": 44306
+      "applicationUrl": "http://localhost:61202",
+      "sslPort": 44361
     }
   },
   "profiles": {
-    "WebMvc": {
+    "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7018;http://localhost:5018",
+      "applicationUrl": "http://localhost:5291",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7104;http://localhost:5291",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
