--- a/dotnet/WebApiSolution/WebMvc/appsettings.json
+++ b/dotnet/WebApiSolution/WebMvc/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FileStoargeAPIRoot": "https://http://10.0.2.4/"
 }
