--- a/dotnet/WebApiSolution/WebApi/Properties/launchSettings.json
+++ b/dotnet/WebApiSolution/WebApi/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "/swagger/index.html",
+      "launchUrl": "swagger/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
