--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,3 +43,9 @@ steps:
     publishWebProjects: True
     arguments: '--configuration $(BuildConfiguration) --framework $(dotNetFramework) --runtime $(targetRuntime) --self-contained --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
+# Package the file and uploads them as an artifact of the build
+- task: PublishPipelineArtifact@1
+  displayName: 'Publish Pipeline Artifact'
+  inputs:
+    targetPath: '$(Build.ArtifactStagingDirectory)' 
+    artifactName: 'WebMVC'
