Update web-mvc-release.yml for Azure Pipelines

--- a/powershell/web-mvc-release.yml
+++ b/powershell/web-mvc-release.yml
@@ -68,7 +68,7 @@ stages:
     environment:
       name: test-stg
       resourceType: VirtualMachine
-      tags: web
+      tags: webfront
     strategy:
       runOnce:
         deploy:
