Update web-mvc-release.yml for Azure Pipelines

--- a/powershell/web-mvc-release.yml
+++ b/powershell/web-mvc-release.yml
@@ -64,7 +64,7 @@ stages:
     environment:
       name: test-stg
       resourceType: VirtualMachine
-      tags: webfront
+      tags: webFrontEnd
     strategy:
       runOnce:
         deploy:
