--- a/Pipelines/web-api-release.yml
+++ b/Pipelines/web-api-release.yml
@@ -40,10 +40,10 @@ stages:
       - task: DotNetCoreCLI@2
         displayName: 'Publish WebApi app'
         inputs:
-          command: publish
-          publishWebProjects: True
+          command: 'publish'
+          publishWebProjects: true
           arguments: '--configuration $(BuildConfiguration) --framework $(dotNetFramework) --runtime $(targetRuntime) --self-contained --output $(Build.ArtifactStagingDirectory)'
-          zipAfterPublish: True
+          workingDirectory: 'dotnet/WebApiSolution/WebApi'
       # Package the file and uploads them as an artifact of the build
       - task: PublishPipelineArtifact@1
         displayName: 'Publish Pipeline Artifact'
