Update web-api-release.yml for Azure Pipelines

--- a/Pipelines/web-api-release.yml
+++ b/Pipelines/web-api-release.yml
@@ -41,8 +41,9 @@ stages:
         displayName: 'Publish WebApi app'
         inputs:
           command: 'publish'
-          publishWebProjects: true
-          arguments: '--configuration $(BuildConfiguration) --framework $(dotNetFramework) --runtime $(targetRuntime) --self-contained --output $(Build.ArtifactStagingDirectory)/WebApi'
+          publishWebProjects: false
+          projects: '**/WebApi.csproj'
+          arguments: '--configuration $(BuildConfiguration) --framework $(dotNetFramework) --runtime $(targetRuntime) --self-contained --output $(Build.ArtifactStagingDirectory)'
           workingDirectory: 'dotnet/WebApiSolution/WebApi'
       # Package the file and uploads them as an artifact of the build
       - task: PublishPipelineArtifact@1
