use public ip web api

--- a/Pipelines/web-mvc-release.yml
+++ b/Pipelines/web-mvc-release.yml
@@ -62,7 +62,7 @@ stages:
     pool:
       vmImage: 'windows-latest'
     environment:
-      name: test-stg
+      name: staging
       resourceType: VirtualMachine
       tags: webfront
     strategy:
