--- a/Pipelines/web-mvc-release.yml
+++ b/Pipelines/web-mvc-release.yml
@@ -42,7 +42,7 @@ stages:
         inputs:
           command: publish
           publishWebProjects: false
-          projects: '**/WebApi.csproj'
+          projects: '**/WebMvc.csproj'
           arguments: '--configuration $(BuildConfiguration) --framework $(dotNetFramework) --runtime $(targetRuntime) --self-contained --output $(Build.ArtifactStagingDirectory)'
           workingDirectory: 'dotnet/WebApiSolution/WebMvc'
       # Package the file and uploads them as an artifact of the build
@@ -105,6 +105,6 @@ stages:
           - task: IISWebAppDeploymentOnMachineGroup@0
             displayName: 'IIS Web App Deploy'
             inputs:
-              WebSiteName: 'FrontEndMvc'
+              WebSiteName: 'Default Web Site'
               package: '$(System.ArtifactsDirectory)\**\*.zip'
               XmlVariableSubstitution: True
