fix FileStoargeAPIRoot endpoint

--- a/dotnet/WebApiSolution/WebMvc/appsettings.Development.json
+++ b/dotnet/WebApiSolution/WebMvc/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "FileStoargeAPIRoot": "https://localhost:54722/"
+  "FileStorageAPIRoot": "https://localhost:54722/api/"
 }
