--- a/dotnet/WebApiSolution/WebMvc/appsettings.json
+++ b/dotnet/WebApiSolution/WebMvc/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "FileStoargeAPIRoot": "https://http://10.0.2.4/"
+  "FileStorageAPIRoot": "http://10.0.2.4/api/"
 }
