--- a/dotnet/WebApiSolution/WebMvc/appsettings.Development.json
+++ b/dotnet/WebApiSolution/WebMvc/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "FileStorageAPIRoot": "https://localhost:54722/api/"
+  "FileStorageAPIRoot": "https://localhost:5001/"
 }
