add azure jeyvault

--- a/dotnet/WebApiSolution/WebApi/appsettings.Production.json
+++ b/dotnet/WebApiSolution/WebApi/appsettings.Production.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "KeyVaultName": "logcornersecretstore" // storage account ConnectionString, stored in azure key vault
 }
