--- a/dotnet/WebApiSolution/WebApi/WebApi.csproj
+++ b/dotnet/WebApiSolution/WebApi/WebApi.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
+    <PackageReference Include="Azure.Identity" Version="1.8.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
  
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
