--- a/dotnet/WebApiSolution/WebApi/appsettings.Development.json
+++ b/dotnet/WebApiSolution/WebApi/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": ""
+  "ConnectionString": "" // storage account ConnectionString, get from user secret.json
+
 }
