--- a/dotnet/WebApiSolution/WebApi/appsettings.Production.json
+++ b/dotnet/WebApiSolution/WebApi/appsettings.Production.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "KeyVaultName": "logcornersecretstore" // storage account ConnectionString, stored in azure key vault
+  "KeyVaultName": "logcornerdior" // storage account ConnectionString, stored in azure key vault
 }
